=Dependency on Random added

--- a/Project.toml
+++ b/Project.toml
@@ -1,9 +1,15 @@
 name = "MiniML"
-uuid = "d56e20d8-6781-4bed-8c1b-43d7ccb659c9"  
-authors = ["Arqam Rizwan Patel <arqamrp@gmail.com>"] 
-version = "0.1.0"
-description = "A smol Julia package from scratch for deep learning."
+uuid = "d56e20d8-6781-4bed-8c1b-43d7ccb659c9"
 license = "MIT"
+authors = ["Arqam Rizwan Patel <arqamrp@gmail.com>"]
+description = "A smol Julia package from scratch for deep learning."
+version = "0.1.0"
+
+[deps]
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+
+[compat]
+Random = "1.11.0"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
